some react testerino

--- a/index.html
+++ b/index.html
@@ -3,217 +3,13 @@
 <head>
     <title>urn</title>
 		<meta charset="UTF-8">
-    <script src="Urn.js"></script>
+    <link href="main.css" rel="stylesheet">
+    <link href="./node_modules/codemirror/theme/eclipse.css" rel="stylesheet">
+    <link href="./node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
 </head>
 <body>
-<script>
-	(function main(){
-		Test.TIMES = 60000;
-/*
-		Test("Urn: A < k AND B > k", function(){
-				var urn = Urn({
-						content: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-				});
-				var A = urn.getRandom();
-				var B = urn.getRandom();
-				var k = this.getRndInt(1, 10);
-				return A < k && B > k;
-		});
-
-		Test("Dice: A == B", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-
-				return d1 == d2;
-		})
-
-		Test("Dice: A == B == C", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-				var d3 = dice.getRandom();
-				return d1 == d2 && d1 == d3;
-		})
-
-		Test("Dice: A != B", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-				return d1 != d2;
-		})
-
-		Test("Dice: A == 5 AND B == 6", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-				return d1 == 5 && d2 == 6;
-		})
-
-		Test("Dice: A > 3 OR B > 3", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-				return d1 > 3 || d2 > 3;
-		})
-
-		Test("Dice: A > 3 OR B > 3 AND A != B", function(){
-				var dice = Urn({
-						content: [1, 2, 3, 4, 5, 6],
-						putBack: true
-				});
-				var d1 = dice.getRandom();
-				var d2 = dice.getRandom();
-				return (d1 > 3 || d2 > 3) && d1 != d2;
-		})
-		*/
-		Test("Glücksrad 1x rot bei 1 versuch", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-		
-			v = rad.getRandom();
-			return v === "rot";
-		})
-		
-		
-		Test("Glücksrad mindestens 1x rot bei 2 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			
-			for(var i = 0; i < 2; i++) {
-				v = rad.getRandom();
-				if(v === "rot") return true;
-			}
-			v = rad.getRandom();
-			return v === "rot";
-		})
-		
-		Test("Glücksrad genau 1x rot bei 3 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			var hasRed = false;
-			
-			for(var i = 0; i < 3; i++) {
-				v = rad.getRandom();
-				if(v === "rot") {
-					if(hasRed) return false;
-					hasRed = true;
-				}
-			}
-			
-			return hasRed;
-		})
-		
-		Test("Glücksrad mindestens 1x rot bei 3 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			
-			for(var i = 0; i < 3; i++) {
-				v = rad.getRandom();
-				if(v === "rot") return true;
-			}
-			return false;
-		})
-		
-		Test("Glücksrad 3x grün bei 3 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			
-			for(var i = 0; i < 3; i++) {
-				v = rad.getRandom();
-				if(v !== "grün") return false;
-			}
-			return true;
-		})
-		
-		Test("Glücksrad mindestens 2x rot bei 3 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			var c = 0;
-			
-			for(var i = 0; i < 3; i++) {
-				v = rad.getRandom();
-				if(v === "rot") c++;
-			}
-			return c >= 2;
-		})
-		
-		Test("Glücksrad genau 2x rot bei 3 versuchen", function(){
-			var rad = Urn({
-				content: ["rot", "grün", "blau", "weiss"],
-				putBack: true
-			});
-			
-			var v = "";
-			var c = 0;
-			
-			for(var i = 0; i < 3; i++) {
-				v = rad.getRandom();
-				if(v === "rot") {
-					c++;
-				}
-			}
-			
-			return c === 2;
-		})
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-			
-			
-			
-			
-			
-			
-	})();
-	
-</script>
+<div class="content"></div>
+<script src="build/app.js"></script>
 </body>
 </html>
 
